Ecothon.Web/wwwroot/css/main.css
/* Reset and base styles  */
* {
  padding: 0px;
  margin: 0px;
  border: none;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Links */
a, a:link, a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

/* Common */
aside, nav, footer, header, section, main {
  display: block;
}

h1, h2, h3, h4, h5, h6, p {
  font-size: inherit;
  font-weight: inherit;
}

ul, ul li {
  list-style: none;
}

img {
  vertical-align: top;
}

img, svg {
  max-width: 100%;
  height: auto;
}

address {
  font-style: normal;
}

/* Form */
input, textarea, button, select {
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  background-color: transparent;
}

input::-ms-clear {
  display: none;
}

button, input[type=submit] {
  display: inline-block;
  box-shadow: none;
  background-color: transparent;
  background: none;
  cursor: pointer;
}

input:focus, input:active,
button:focus, button:active {
  outline: none;
}

button::-moz-focus-inner {
  padding: 0;
  border: 0;
}

label {
  cursor: pointer;
}

legend {
  display: block;
}

@font-face {
  font-family: "Onest";
  src: url("../fonts/onest/OnestRegular.eot");
  src: url("../fonts/onest/OnestRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/onest/OnestRegular.woff") format("woff"), url("../fonts/onest/OnestRegular.woff2") format("woff2"), url("../fonts/onest/OnestRegular.ttf") format("truetype"), url("../fonts/onest/OnestRegular.svg#Sri-TSCRegular") format("svg");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Onest";
  src: url("../fonts/onest/OnestMedium.eot");
  src: url("../fonts/onest/OnestMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/onest/OnestMedium.woff") format("woff"), url("../fonts/onest/OnestMedium.woff2") format("woff2"), url("../fonts/onest/OnestMedium.ttf") format("truetype"), url("../fonts/onest/OnestMedium.svg#Sri-TSCRegular") format("svg");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Onest";
  src: url("../fonts/onest/OnestBold.eot");
  src: url("../fonts/onest/OnestBold.eot?#iefix") format("embedded-opentype"), url("../fonts/onest/OnestBold.woff") format("woff"), url("../fonts/onest/OnestBold.woff2") format("woff2"), url("../fonts/onest/OnestBold.ttf") format("truetype"), url("../fonts/onest/OnestBold.svg#Sri-TSCRegular") format("svg");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}
.header-5 {
  font-size: 24px;
  line-height: 28.8px;
  letter-spacing: -0.50688px;
  font-weight: 700;
}

.header-5 {
  font-size: 24px;
  line-height: 28.8px;
  letter-spacing: -0.50688px;
  font-weight: 700;
}

.container {
  width: 100%;
  max-width: 1328px;
  margin: 0 auto;
  padding: 0 24px;
}
.container-fluid {
  width: 100%;
  padding: 0 24px;
}
@media screen and (max-width: 1024px) {
  .container {
    width: 100%;
    max-width: none;
    padding: 0 24px;
  }
}
@media screen and (max-width: 767px) {
  .container {
    width: 100%;
    max-width: none;
    padding: 0 12px;
  }
}

.title-container {
  display: flex;
  margin-top: 24px;
}
@media screen and (max-width: 1024px) {
  .title-container {
    margin-top: 24px;
  }
}
@media screen and (max-width: 767px) {
  .title-container {
    margin-top: 12px;
  }
}

.title-container .info-label {
  margin-left: 12px;
}

.header-5 {
  font-size: 24px;
  line-height: 28.8px;
  letter-spacing: -0.50688px;
  font-weight: 700;
}

@font-face {
  font-family: "Onest";
  src: url("../fonts/onest/OnestRegular.eot");
  src: url("../fonts/onest/OnestRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/onest/OnestRegular.woff") format("woff"), url("../fonts/onest/OnestRegular.woff2") format("woff2"), url("../fonts/onest/OnestRegular.ttf") format("truetype"), url("../fonts/onest/OnestRegular.svg#Sri-TSCRegular") format("svg");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Onest";
  src: url("../fonts/onest/OnestMedium.eot");
  src: url("../fonts/onest/OnestMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/onest/OnestMedium.woff") format("woff"), url("../fonts/onest/OnestMedium.woff2") format("woff2"), url("../fonts/onest/OnestMedium.ttf") format("truetype"), url("../fonts/onest/OnestMedium.svg#Sri-TSCRegular") format("svg");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Onest";
  src: url("../fonts/onest/OnestBold.eot");
  src: url("../fonts/onest/OnestBold.eot?#iefix") format("embedded-opentype"), url("../fonts/onest/OnestBold.woff") format("woff"), url("../fonts/onest/OnestBold.woff2") format("woff2"), url("../fonts/onest/OnestBold.ttf") format("truetype"), url("../fonts/onest/OnestBold.svg#Sri-TSCRegular") format("svg");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}
body {
  font-family: "Onest", sans-serif;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: -0.17px;
  font-weight: 400;
  font-style: normal;
  color: #141414;
}

a {
  color: #141414;
  cursor: pointer;
}

h1 {
  font-size: 48px;
  line-height: 57.6px;
  letter-spacing: -1.05107px;
  font-weight: 700;
}

h2 {
  font-size: 40px;
  line-height: 48px;
  letter-spacing: -0.875776px;
  font-weight: 700;
}

h3 {
  font-size: 32px;
  line-height: 38.4px;
  letter-spacing: -0.730048px;
  font-weight: 700;
}

h4 {
  font-size: 28px;
  line-height: 33.6px;
  letter-spacing: -0.608256px;
  font-weight: 700;
}

h5 {
  font-size: 24px;
  line-height: 28.8px;
  letter-spacing: -0.50688px;
  font-weight: 700;
}

h6 {
  font-size: 20px;
  line-height: 24px;
  letter-spacing: -0.4224px;
  font-weight: 700;
}

.h8 {
  font-size: 12px;
  line-height: 15px;
  letter-spacing: -0.608256px;
  font-weight: 700;
}

.info-label {
  font-size: 14px;
  line-height: 20px;
  letter-spacing: -0.2px;
  font-weight: 400;
  font-family: "Onest", serif;
  color: rgba(0, 0, 0, 0.6);
  font-weight: 400;
}

.indicator-label {
  font-size: 14px;
  line-height: 20px;
  letter-spacing: -0.2px;
  font-weight: 400;
  font-family: "Onest", serif;
  color: #1579CE;
  font-weight: 400;
}

input {
  border: 1px solid #e0e5eb;
  border-radius: 8px;
  padding: 7px 12px;
  width: 100%;
  color: #141414;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: -0.17px;
  font-weight: 400;
}

.header-5 {
  font-size: 24px;
  line-height: 28.8px;
  letter-spacing: -0.50688px;
  font-weight: 700;
}

.btn {
  display: inline-block;
  padding: 4px 12px;
  background-color: #E0E5EB;
  border: 1px solid #E0E5EB;
  border-radius: 8px;
  transition: all 0.25s ease;
  cursor: pointer;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.btn.btn-icon {
  display: inline-flex;
  align-items: center;
  column-gap: 10px;
}
.btn:hover {
  background-color: #d7dde5;
  border: 1px solid #d7dde5;
  transition: all 0.25s ease;
}
.btn:active {
  background-color: #c4ced9;
  border: 1px solid #c4ced9;
  transition: all 0.25s ease;
}
.btn.btn-secondary {
  background-color: white;
  border: 1px solid #1579CE;
  color: #1579CE;
  transition: all 0.25s ease;
}
.btn.btn-primary {
  background-color: #ee1e23;
  border: 1px solid #ee1e23;
  color: #fff;
  transition: all 0.25s ease;
}
.btn.btn-primary:hover {
  background-color: #ef2c31;
  border: 1px solid #ef2c31;
  transition: all 0.25s ease;
}
.btn.btn-primary:active {
  background-color: #eb1217;
  border: 1px solid #eb1217;
  transition: all 0.25s ease;
}

.nav {
  display: inline-flex;
  border-radius: 12px;
  background: white;
  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.15);
  justify-content: space-between;
  align-items: center;
  padding-top: 12px;
  padding-bottom: 12px;
  pointer-events: auto;
}
.nav .links {
  display: inline-flex;
  align-items: center;
}
.nav .links .btn {
  border-radius: 0;
  background-color: transparent;
  border: none;
}
.nav .links .btn:hover a {
  border-bottom: 2px solid #ee1e23;
}
.nav .links .btn a.active {
  border-bottom: 2px solid #ee1e23;
}

.map {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.tags-container {
  display: flex;
  margin-top: 8px;
  gap: 8px;
}

.tag {
  padding: 2px 8px;
  display: flex;
  align-items: center;
  border-radius: 6px;
  gap: 4px;
  background: #1579CE;
}

.tag-text {
  font-size: 14px;
  line-height: 20px;
  letter-spacing: -0.2px;
  font-weight: 400;
  color: #fff;
}

.filter-form-label {
  font-size: 14px;
  line-height: 20px;
  letter-spacing: -0.2px;
  font-weight: 400;
  color: rgba(20, 20, 20, 0.6);
}

.filter-form-select-container {
  width: 100%;
  background: #F6F7F9;
  border-radius: 8px;
  padding: 6px 12px;
}

.filter-form-select-container select {
  width: 100%;
}

.filter-form-select-option {
  font-size: 16px;
  line-height: 24px;
  letter-spacing: -0.17px;
  font-weight: 400;
}

.filter-form-section {
  padding-top: 24px;
}

.filter-form-section .filter-form-label {
  margin-bottom: 4xp;
}

.separator {
  height: 1px;
  background: #E0E5EB;
}

.filters-content {
  flex: 1;
}

.filters-submit {
  width: 100%;
  padding: 6px 0px;
}

#app {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.main {
  position: absolute;
  top: 0;
  bottom: 0;
  pointer-events: none;
  display: flex;
  flex-flow: column;
  padding-top: 12px;
  padding-bottom: 8px;
  row-gap: 8px;
}

.accent {
  color: #ee1e23;
}

/*# sourceMappingURL=main.css.map */

